**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES
------

* Could use R_CheckUserInterrupt() to allow user interupt of
  mgcv code. (6.12) But then what about memory?

* Should use R memory allocation to gracefully handle out of memory 
  problems, or at least check for NULL pointer return. How to free on 
  error/interupt? Note that under linux there is no guarantee that calloc
  will return a NULL pointer even if the memory requested is not actually 
  available. See man calloc.

* Should re-do initial.sp to use X'WX with initial W. Also base on 
  Frobenious norm.

* should set fscale from get.null.coef

* Some error message translation files need updating.

1.5-6

* `gamm' fix: prediction and visualization from `x$gam' where x is a 
  fitted `gamm' object should not require the random effects to be 
  provided. Now it doesn't.

* minor bug fix: a model with no penalties except a fixed one would fail
  with an index error. 

* `te' terms are now only subject to centering constraints if all 
  marginals would usually have a centering constraint. 

* `te' no longer resets multi-dimensional marginals to "tp", unless 
  they have been set to "cr", "cs", "ps" or "cp". This allows tensor
  products with user supplied smooths.

* Example of obtaining derivatives of a smooth (with CIs) added to 
  `predict.gam' help file.

* `newdata.guaranteed' argument to predict.gam didn't work. fixed.

1.5-5

* `gamm.setup' made an assumption about basis dimensions which was not 
  true for tensor products involving the "cc" basis. This is now fixed.

1.5-4

* smooth.construct.tensor.smooth.spec modified, so that 
  re-parameterization in terms of function values is only if it's 
  stable, and by default the parameters are function values with
  even spacing. Otherwise it was possible for tensor products of
  p-splines to fail.

1.5-3

* `gam' now attempts to coerce `data' to a data frame, if it is not 